# editrion

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-build.yml
scripts/: ensure-icons.cjs
src/: i18n.ts  main.ts  style.css
src-tauri/: Cargo.toml  capabilities.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  config.rs  error.rs  main.rs  menu.rs
src-tauri/src/commands/: app.rs  external_cli.rs  file_system.rs  mod.rs
src-tauri/src/core/: mod.rs  process_manager.rs
src/app/: App.ts
src/components/: Editor.ts  FileExplorer.ts  SearchPanel.ts  Tab.ts
src/locales/: de.json  en.json  es.json  fr.json  ja.json  uk.json
src/services/: i18n.ts  shortcuts.ts  tauriApi.ts  themeManager.ts
src/store/: BaseStore.ts  appStore.ts  tabsStore.ts
src/types/: index.ts
