[package]
name = "editrion"
version = "1.0.0"
description = "A modern code editor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
