[package]
name = "editrion"
version = "0.0.2"
description = "A modern and simple text editor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-dialog = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
anyhow = "1.0"
strip-ansi-escapes = "0.2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
